docs/sf-export/sfdx-raw/objects/Lead_Staging__c/Lead_Staging__c.object-meta.xml
<CustomObject>
    <label>Lead Staging</label>
    <nameField>
        <displayFormat>Lead-{000000}</displayFormat>
        <label>Lead Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>