docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email__c</fullName>
    <label>Alternate Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>