docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Business_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Start_Date__c</fullName>
    <label>Business Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>