docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Call_counter__c.field-meta.xml
<CustomField>
    <fullName>Call_counter__c</fullName>
    <label>Call counter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>