docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Called_Count__c.field-meta.xml
<CustomField>
    <fullName>Called_Count__c</fullName>
    <label>Called Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>