docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Converted_To_Lead__c.field-meta.xml
<CustomField>
    <fullName>Converted_To_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted To Lead</label>
    <type>Checkbox</type>
</CustomField>