docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Convoso_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Convoso_Lead_Id__c</fullName>
    <externalId>true</externalId>
    <label>Convoso Lead Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>