docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Convoso_List__c.field-meta.xml
<CustomField>
    <fullName>Convoso_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Convoso List</label>
    <referenceTo>Convoso_List__c</referenceTo>
    <relationshipLabel>Lead Staging</relationshipLabel>
    <relationshipName>Lead_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>