docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score__c</fullName>
    <label>Credit Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>