docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Creditor_10_Total_Debt__c.field-meta.xml
<CustomField>
    <fullName>Creditor_10_Total_Debt__c</fullName>
    <description>To store the total debt of the creditor 10</description>
    <label>Creditor 10 Total Debt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>