docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Creditor_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Creditor_2_Name__c</fullName>
    <description>To store the name of the creditor 2</description>
    <label>Creditor 2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>