docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Creditor_2_Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Creditor_2_Payment_Frequency__c</fullName>
    <description>To capture the payment frequency of the creditor 2</description>
    <label>Creditor 2 Payment Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>