docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Current_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Payment_Amount__c</fullName>
    <label>Current Payment Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>