docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Current_Total_Weekly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Current_Total_Weekly_Payment__c</fullName>
    <label>Current Total Weekly Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>