docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Data_Error__c.field-meta.xml
<CustomField>
    <fullName>Data_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Error</label>
    <type>Checkbox</type>
</CustomField>