docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <label>Date Of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>