docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Debt_Details__c.field-meta.xml
<CustomField>
    <fullName>Debt_Details__c</fullName>
    <label>Debt Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>