docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/EIN_Number_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>EIN_Number_Tax_Id__c</fullName>
    <label>EIN Number / Tax Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>