docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Exclude__c.field-meta.xml
<CustomField>
    <fullName>Exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude</label>
    <type>Checkbox</type>
</CustomField>