docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>