docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>