docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Hopper__c.field-meta.xml
<CustomField>
    <fullName>Hopper__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not to insert the lead into the Hopper</description>
    <label>Hopper</label>
    <type>Checkbox</type>
</CustomField>