docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Hopper_Expires_In__c.field-meta.xml
<CustomField>
    <fullName>Hopper_Expires_In__c</fullName>
    <description>In how many minutes hopper will be expired (max value is 300)</description>
    <label>Hopper Expires In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>