docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Hopper_Priority__c.field-meta.xml
<CustomField>
    <fullName>Hopper_Priority__c</fullName>
    <description>Hopper priority level.Value range is from 0 to 99.Default is 99.</description>
    <label>Hopper Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>