docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Lead_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Vendor_ID__c</fullName>
    <label>Lead Vendor ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>