docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Lenders__c.field-meta.xml
<CustomField>
    <fullName>Lenders__c</fullName>
    <label>Lenders</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>