docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/List_Id__c.field-meta.xml
<CustomField>
    <fullName>List_Id__c</fullName>
    <description>Convoso List`s ID</description>
    <label>List Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>