docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/MCA_Amount__c.field-meta.xml
<CustomField>
    <fullName>MCA_Amount__c</fullName>
    <label>MCA Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>