docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/MCA_Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>MCA_Amount_Requested__c</fullName>
    <label>MCA Amount Requested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>