docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>Mobile Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>