docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Revenue__c</fullName>
    <label>Monthly Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>