docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <label>Payment Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>