docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <label>SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>