docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Total_Debt_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt_Amount__c</fullName>
    <label>Total Debt Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>