docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/UCC_filing_Date__c.field-meta.xml
<CustomField>
    <fullName>UCC_filing_Date__c</fullName>
    <label>UCC filing Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>