docs/sf-export/sfdx-raw/objects/Lead_Staging__c/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <label>Work Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>